[gd_scene load_steps=11 format=3 uid="uid://ddofaqwx8104e"]

[ext_resource type="Script" path="res://minigames/soda_cap_reveal/soda_cap_reaveal_mini_game.gd" id="1_px2qm"]
[ext_resource type="Texture2D" uid="uid://clk4838cmysed" path="res://minigames/soda_cap_reveal/soda_cap_layer_1.png" id="2_hrkrd"]
[ext_resource type="Texture2D" uid="uid://dcwdtwm3htrp7" path="res://minigames/soda_cap_reveal/soda_cap_layer_0.png" id="3_63p6d"]
[ext_resource type="Texture2D" uid="uid://d4gunlcnsjsf0" path="res://minigames/soda_cap_reveal/soda_cap_layer_2.png" id="4_5l18q"]
[ext_resource type="Texture2D" uid="uid://cj2621qa5yb0w" path="res://minigames/soda_cap_reveal/soda_cap_layer_3.png" id="5_uof4c"]
[ext_resource type="Texture2D" uid="uid://bkt4bxprjcmiv" path="res://minigames/soda_cap_reveal/soda_cap_layer_4.png" id="6_upcy0"]
[ext_resource type="Texture2D" uid="uid://jtgcvpraos7p" path="res://minigames/soda_cap_reveal/soda_cap_layer_5.png" id="7_3y7hh"]
[ext_resource type="Texture2D" uid="uid://c8ma5ml351gy4" path="res://minigames/soda_cap_reveal/soda_cap_layer_6.png" id="8_c1wmu"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f7slh"]
radius = 100.0
height = 400.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4bs2g"]
radius = 100.0
height = 200.0

[node name="SodaCapReavealMiniGame" type="Node2D"]
script = ExtResource("1_px2qm")
accepted_keys = Array[int]([4194319, 4194321, 65, 81, 69])
accepted_button_indexes = Array[int]([1, 2])
started = true

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(255, 255)

[node name="Layer1" type="Sprite2D" parent="Node2D"]
self_modulate = Color(0.84, 0.84, 0.84, 1)
position = Vector2(-21, 86)
texture = ExtResource("2_hrkrd")
offset = Vector2(21, -86)

[node name="Area2D1" type="Area2D" parent="Node2D/Layer1"]
priority = 300

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Layer1/Area2D1"]
position = Vector2(32, -157)
rotation = 0.191235
shape = SubResource("CapsuleShape2D_f7slh")

[node name="Layer0" type="Sprite2D" parent="Node2D"]
position = Vector2(-32, 141)
texture = ExtResource("3_63p6d")
offset = Vector2(32, -141)

[node name="Area2D0" type="Area2D" parent="Node2D/Layer0"]
priority = 500

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Layer0/Area2D0"]
position = Vector2(-35, -95)
rotation = 0.191235
shape = SubResource("CapsuleShape2D_4bs2g")

[node name="Layer2" type="Sprite2D" parent="Node2D"]
self_modulate = Color(0.839216, 0.839216, 0.839216, 1)
texture = ExtResource("4_5l18q")

[node name="Layer3" type="Sprite2D" parent="Node2D"]
self_modulate = Color(0.84, 0.84, 0.84, 1)
position = Vector2(111, 139)
texture = ExtResource("5_uof4c")
offset = Vector2(-111, -139)

[node name="Area2D3" type="Area2D" parent="Node2D/Layer3"]
priority = 700

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Layer3/Area2D3"]
position = Vector2(4, -154)
rotation = -0.0144573
shape = SubResource("CapsuleShape2D_f7slh")

[node name="Layer4" type="Sprite2D" parent="Node2D"]
self_modulate = Color(0.84, 0.84, 0.84, 1)
position = Vector2(9, 64)
texture = ExtResource("6_upcy0")
offset = Vector2(-9, -64)

[node name="Area2D4" type="Area2D" parent="Node2D/Layer4"]
priority = 800

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Layer4/Area2D4"]
position = Vector2(47, -98)
rotation = 0.46185
shape = SubResource("CapsuleShape2D_f7slh")

[node name="Layer5" type="Sprite2D" parent="Node2D"]
self_modulate = Color(0.84, 0.84, 0.84, 1)
position = Vector2(-95, 142)
texture = ExtResource("7_3y7hh")
offset = Vector2(95, -142)

[node name="Area2D5" type="Area2D" parent="Node2D/Layer5"]
priority = 900

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Layer5/Area2D5"]
position = Vector2(-28, -126)
rotation = -0.536522
shape = SubResource("CapsuleShape2D_f7slh")

[node name="Layer6" type="Sprite2D" parent="Node2D"]
self_modulate = Color(0.84, 0.84, 0.84, 1)
position = Vector2(-49, 93)
texture = ExtResource("8_c1wmu")
offset = Vector2(49, -93)

[node name="Area2D6" type="Area2D" parent="Node2D/Layer6"]
priority = 100

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Layer6/Area2D6"]
position = Vector2(-36, -82)
rotation = -0.289549
shape = SubResource("CapsuleShape2D_f7slh")

[connection signal="mouse_entered" from="Node2D/Layer1/Area2D1" to="." method="_on_area_2d_1_mouse_entered"]
[connection signal="mouse_exited" from="Node2D/Layer1/Area2D1" to="." method="_on_area_2d_1_mouse_exited"]
[connection signal="mouse_entered" from="Node2D/Layer0/Area2D0" to="." method="_on_area_2d_0_mouse_entered"]
[connection signal="mouse_exited" from="Node2D/Layer0/Area2D0" to="." method="_on_area_2d_0_mouse_exited"]
[connection signal="mouse_entered" from="Node2D/Layer3/Area2D3" to="." method="_on_area_2d_3_mouse_entered"]
[connection signal="mouse_exited" from="Node2D/Layer3/Area2D3" to="." method="_on_area_2d_3_mouse_exited"]
[connection signal="mouse_entered" from="Node2D/Layer4/Area2D4" to="." method="_on_area_2d_4_mouse_entered"]
[connection signal="mouse_exited" from="Node2D/Layer4/Area2D4" to="." method="_on_area_2d_4_mouse_exited"]
[connection signal="mouse_entered" from="Node2D/Layer5/Area2D5" to="." method="_on_area_2d_5_mouse_entered"]
[connection signal="mouse_exited" from="Node2D/Layer5/Area2D5" to="." method="_on_area_2d_5_mouse_exited"]
[connection signal="mouse_entered" from="Node2D/Layer6/Area2D6" to="." method="_on_area_2d_6_mouse_entered"]
[connection signal="mouse_exited" from="Node2D/Layer6/Area2D6" to="." method="_on_area_2d_6_mouse_exited"]
